finish last razdel

--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -9,5 +9,6 @@
 
 // Font Mixins
 @mixin body-font {
-  font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  // font-family: 'Source Sans Pro', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
