--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -21,3 +21,34 @@ section.padding {
   color: rgb(230, 0, 0);
   font-weight: 500
 }
+
+@media (max-width: 768px) {
+
+  .display-3 {
+    font-size: 2.6rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+
+  .display-4 {
+    font-size: 2.4rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+
+  .display-5 {
+    font-size: 2.0rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+}
+
+
+
+.program {
+  .btn {
+    white-space: pre-wrap;
+    text-align: left;
+
+  }
+}
