--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -4,6 +4,10 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-landing-page/blob/master/LICENSE)
  */
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -34,13 +38,11 @@ section.padding {
     font-weight: 300;
     line-height: 1.2;
   }
-
   .display-4 {
     font-size: 2.4rem;
     font-weight: 300;
     line-height: 1.2;
   }
-
   .display-5 {
     font-size: 2.0rem;
     font-weight: 300;
@@ -81,7 +83,6 @@ header.masthead h1 {
     padding-top: 6rem;
     padding-bottom: 6rem;
   }
-
   header.masthead h1 {
     font-size: 3rem;
   }
