--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -56,3 +56,16 @@ section.padding {
 
   }
 }
+
+
+.fade-in {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 1s linear;
+}
+
+.fade-out {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 1s, opacity 1s linear;
+}
