--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -44,7 +44,7 @@ section.padding {
     line-height: 1.2;
   }
   .display-5 {
-    font-size: 2.0rem;
+    font-size: 2rem;
     font-weight: 300;
     line-height: 1.2;
   }
@@ -67,6 +67,34 @@ section.padding {
   opacity: 0;
   -webkit-transition: visibility 0s 1s, opacity 1s linear;
   transition: visibility 0s 1s, opacity 1s linear;
+}
+
+.gi-2x {
+  font-size: 2em;
+}
+
+.gi-3x {
+  font-size: 3em;
+}
+
+.gi-4x {
+  font-size: 4em;
+}
+
+.gi-5x {
+  font-size: 5em;
+}
+
+.gi-6x {
+  font-size: 6em;
+}
+
+.gi-7x {
+  font-size: 7em;
+}
+
+.gi-8x {
+  font-size: 8em;
 }
 
 header.masthead {
