--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -32,6 +32,12 @@ section.padding {
   font-weight: 500;
 }
 
+.display-5 {
+  font-size: 2.4rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 @media (max-width: 768px) {
   .display-3 {
     font-size: 2.6rem;
