--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -26,6 +26,12 @@ section.padding {
   font-weight: 500;
 }
 
+.display-5 {
+  font-size: 2.4rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 @media (max-width: 768px) {
   .display-3 {
     font-size: 2.6rem;
@@ -68,21 +74,27 @@ section.padding {
 .gi-2x {
   font-size: 2em;
 }
+
 .gi-3x {
   font-size: 3em;
 }
+
 .gi-4x {
   font-size: 4em;
 }
+
 .gi-5x {
   font-size: 5em;
 }
+
 .gi-6x {
   font-size: 6em;
 }
+
 .gi-7x {
   font-size: 7em;
 }
+
 .gi-8x {
   font-size: 8em;
 }
