--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -38,6 +38,12 @@ section.padding {
   line-height: 1.2;
 }
 
+.display-6 {
+  font-size: 2.0rem;
+  font-weight: 300;
+  line-height: 1.2;
+}
+
 @media (max-width: 768px) {
   .display-3 {
     font-size: 2.6rem;
@@ -51,6 +57,11 @@ section.padding {
   }
   .display-5 {
     font-size: 2rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+  .display-6 {
+    font-size: 1.6rem;
     font-weight: 300;
     line-height: 1.2;
   }
@@ -101,6 +112,14 @@ section.padding {
 
 .gi-8x {
   font-size: 8em;
+}
+
+.table-nonfluid {
+  width: auto !important;
+}
+
+.bg-dark {
+  color: white;
 }
 
 header.masthead {
