musthead background gradient

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -131,8 +131,12 @@ section.padding {
 
 header.masthead {
   position: relative;
-  background-color: #343a40;
-  background: url("../img/bg-masthead.jpg") no-repeat center center;
+  background: #333333;
+  /* fallback for old browsers */
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-gradient(linear, left top, right bottom, from(#434343), to(#000000));
+  background: linear-gradient(to bottom right, #434343, #000000);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   background-size: cover;
   padding-top: 6rem;
   padding-bottom: 4rem;
