--- a/scss/_masthead.scss
+++ b/scss/_masthead.scss
@@ -1,7 +1,13 @@
 header.masthead {
   position: relative;
-  background-color: $gray-800;
-  background: url('../img/bg-masthead.jpg') no-repeat center center;
+  background: #333333;
+  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom right, #434343, #000000);
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom right, #434343, #000000);
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  // background: url('../img/bg-masthead.jpg') no-repeat center center;
   @include background-cover;
   padding-top: 6rem;
   padding-bottom: 4rem;
