--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -6,6 +6,13 @@ body {
   @include body-font;
 }
 
+img {
+  max-width: 100%;
+  height: auto;
+  width: auto\9;
+  /* ie8 */
+}
+
 h1,
 h2,
 h3,
@@ -19,6 +26,50 @@ h6 {
 section.padding {
   padding-top: 7rem;
   padding-bottom: 7rem;
+}
+
+// rounded corners table
+table {
+  border: 1px solid #ddd;
+  border-collapse: separate;
+  border-left: 0;
+  border-radius: 4px;
+  border-spacing: 0px;
+}
+
+thead {
+  display: table-header-group;
+  vertical-align: middle;
+  border-color: inherit;
+  border-collapse: separate;
+}
+
+tr {
+  display: table-row;
+  vertical-align: inherit;
+  border-color: inherit;
+}
+
+th,
+td {
+  padding: 5px 4px 6px 4px;
+  text-align: left;
+  vertical-align: top;
+  border-left: 1px solid #ddd;
+}
+
+td {
+  border-top: 1px solid #ddd;
+}
+
+thead:first-child tr:first-child th:first-child,
+tbody:first-child tr:first-child td:first-child {
+  border-radius: 4px 0 0 0;
+}
+
+thead:last-child tr:last-child th:first-child,
+tbody:last-child tr:last-child td:first-child {
+  border-radius: 0 0 0 4px;
 }
 
 .sale {
