--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -12,7 +12,7 @@ body {
   font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
-img {
+img-fluid {
   max-width: 100%;
   height: auto;
   width: auto\9;
