add shadows for features icons

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -29,6 +29,11 @@ h6 {
   font-weight: 700;
 }
 
+.smooth {
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
 section.padding {
   padding-top: 7rem;
   padding-bottom: 7rem;
@@ -290,4 +295,8 @@ header.masthead h1 {
 footer.footer {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i {
+  text-shadow: -10px 20px 2px rgba(0, 202, 216, 0.2);
 }
