--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -297,6 +297,22 @@ footer.footer {
   padding-bottom: 4rem;
 }
 
-.features-icons .features-icons-item:hover .features-icons-icon i {
-  text-shadow: -10px 15px 2px rgba(0, 202, 216, 0.2);
+.features-icons .features-icons-item:hover .features-icons-icon i.text-info {
+  text-shadow: -10px 15px 2px rgba(23, 162, 184, 0.2);
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i.text-primary {
+  text-shadow: -10px 15px 2px rgba(0, 123, 255, 0.2);
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i.text-warning {
+  text-shadow: -10px 15px 2px rgba(255, 193, 7, 0.2);
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i.text-danger {
+  text-shadow: -10px 15px 2px rgba(220, 53, 69, 0.2);
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i.text-success {
+  text-shadow: -10px 15px 2px rgba(40, 167, 69, 0.2);
 }
