--- a/scss/_bootstrap-custom.scss
+++ b/scss/_bootstrap-custom.scss
@@ -1,4 +1,19 @@
-.features-icons .features-icons-item:hover .features-icons-icon i {
-    @include text-shadow(-10px, 15px, 2px, rgba(0, 202, 216, 0.2));
+.features-icons .features-icons-item:hover .features-icons-icon i.text-info {
+    @include text-shadow(-10px, 15px, 2px, rgba(23, 162, 184, 0.2));
+}
 
+.features-icons .features-icons-item:hover .features-icons-icon i.text-primary {
+    @include text-shadow(-10px, 15px, 2px, rgba(0, 123, 255, 0.2));
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i.text-warning {
+    @include text-shadow(-10px, 15px, 2px, rgba(255, 193, 7, 0.2));
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i.text-danger {
+    @include text-shadow(-10px, 15px, 2px, rgba(220, 53, 69, 0.2));
+}
+
+.features-icons .features-icons-item:hover .features-icons-icon i.text-success {
+    @include text-shadow(-10px, 15px, 2px, rgba(40, 167, 69, 0.2));
 }
